--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ perl6:
   - 2016.01
 install:
   - rakudobrew build zef
-  - zef --deps-only install .
+  - zef install .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.build(~$*CWD)'
   - PERL6LIB=$PWD/lib prove -e perl6 -vr t/
 sudo: false
